--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
  #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/john.png);
+    background-image: url(john.png);
     background-size: cover;
     background-position: center;
 
@@ -379,4 +379,5 @@ form .btn2{
     .copyright{
         font-size: 14px;
     }
+
 }
